--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="/javascript/javascript.js" async></script>
+    <script src="javascript/javascript.js" async></script>
 </head>
 <body>
     <div id="calculator">
