added del button that deletes last displayed character

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <button>0</button>
             <button>=</button>
             <button>C</button>
+            <button>Del</button>
         </div>
         <div id="footer">Powered by Uras Yılmaz</div>
     </div>
