updated styles and index

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <button>.</button>
             <button>0</button>
             <button>=</button>
-            <button>C</button>
-            <button>Del</button>
+            <button id="clear">C</button>
+            <button id="delete">Del</button>
         </div>
         <div id="footer">Powered by Uras Yılmaz</div>
     </div>
